chore: update Prisma dependencies to version 6.15.0
feat: add initial migration for user and API key management with S3 bucket integration

chore: add migration lock file for Prisma

fix: enforce required AWS S3 environment variables in configuration

refactor: update API key creation logic to remove S3 folder creation

refactor: modify storage controller to use file keys instead of names for S3 operations

feat: enhance user profile response to include API keys information

feat: improve account summary to include API key usage statistics

chore: update Express request types to include custom properties

fix: adjust import paths for consistency across the application

refactor: update S3 service to use file size in bytes and remove unnecessary checks

fix: update usage service to log deleted file keys instead of names

chore: remove unused Express type definitions

fix: correct import paths in token utility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "http://localhost:8080",
     "target": "es2016",
     "module": "commonjs",
     "rootDir": "./src",
