--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.879.0",
     "@aws-sdk/s3-request-presigner": "^3.879.0",
-    "@prisma/client": "6.0.1",
+    "@prisma/client": "^6.15.0",
     "@types/bcrypt": "^6.0.0",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
@@ -43,7 +43,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "prettier": "^3.5.3",
-    "prisma": "6.0.1",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
